[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/multiplayer/LocalMultiplayerManager.gd" type="Script" id=1]

[node name="LocalMultiplayer" type="Node"]
script = ExtResource( 1 )

[node name="ViewportContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GridContainer" type="GridContainer" parent="ViewportContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
columns = 2

[node name="VP_Container_P1" type="ViewportContainer" parent="ViewportContainer/GridContainer"]
margin_right = 320.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport_P1" type="Viewport" parent="ViewportContainer/GridContainer/VP_Container_P1"]
size = Vector2( 320, 480 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="VP_Container_P2" type="ViewportContainer" parent="ViewportContainer/GridContainer"]
margin_left = 320.0
margin_right = 640.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport_P2" type="Viewport" parent="ViewportContainer/GridContainer/VP_Container_P2"]
size = Vector2( 320, 480 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
